Squash footer/header overlap bug

--- a/themes/trc/sass/_internship.scss
+++ b/themes/trc/sass/_internship.scss
@@ -54,7 +54,7 @@
       background: $color_brand-white-transparent;
       position: fixed;
       width: 100%;
-      top: 8.3rem;
+      margin-top: 100px;
     }
     ul {
       width: 80%;
