--- a/themes/trc/sass/_navigation.scss
+++ b/themes/trc/sass/_navigation.scss
@@ -573,7 +573,7 @@ div.tekera-triangles{
     position: absolute;
     left: 3rem;
     top: 20rem; 
-		z-index: 100;
+		z-index: 98;
 		a {
 			width: auto;
 		}       
